# ggufpacker

./: .gitignore  README.md  STATUS.md  pyproject.toml
docs/: conversion-attestation.md  derivation-attestation.md
src/ggufpack/: __init__.py  blobs.py  cli.py  delta.py  layout.py  manifest.py  packer.py  quantizer.py  unpacker.py
src/ggufpacker/: __init__.py  attest.py  cache.py  cli.py  conversion_attest.py  converter.py  manifest.py  packer.py  quantizer.py  recipe.py  unpacker.py
tests/: conftest.py  test_attest.py  test_attest_hardening.py  test_cache.py  test_cache_prune.py  test_conversion_attest.py  test_delta.py  test_layout.py  test_manifest.py  test_manifest_errors.py  test_multimodel.py  test_prune.py  test_recipe.py  test_roundtrip.py  util_tinymodel.py
