[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ggufpacker"
version = "0.4.1"
description = "Check that a GGUF quant derives bit-exactly from its claimed base model; pack quant ladders as recipes and regenerate every file bit-exact."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["gguf", "llama.cpp", "quantization", "provenance", "attestation", "in-toto", "reproducibility", "compression", "deduplication"]
license = { text = "MIT" }
authors = [{ name = "Adam Danielsson", email = "the.adam.danielsson@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: System :: Archiving :: Compression",
]
dependencies = [
    "gguf>=0.10",
    "zstandard>=0.22",
]

[project.urls]
Homepage = "https://github.com/theadamdanielsson/ggufpacker"
Source = "https://github.com/theadamdanielsson/ggufpacker"
Issues = "https://github.com/theadamdanielsson/ggufpacker/issues"
Evidence = "https://github.com/theadamdanielsson/gguf-quant-determinism"
UpstreamPR = "https://github.com/ggml-org/llama.cpp/pull/25353"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
ggufpacker = "ggufpacker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
